--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900|Ubuntu:300,400,500,700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>NoiseMakers - Faça barulho pelo mundo!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
